--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ env:
   - BROWSER=Firefox
 
 install:
+  # Install Chrome
+  - wget https://dl.google.com/linux/direct/google-chrome-stable_current_i386.deb
+  - sudo dpkg --install google-chrome-stable_current_i386.deb || true
+  - sudo apt-get -f install
+  # Install PIL
   - sudo apt-get install python-imaging
   - pip install -r .requirements --use-mirrors
 
