--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,9 @@ env:
 install:
   # Install Chrome
   - wget https://dl.google.com/linux/direct/google-chrome-stable_current_i386.deb
-  - sudo dpkg --install google-chrome-stable_current_i386.deb || true
-  - sudo apt-get -f install
+  - if [ x$BROWSER == xChrome ]; then sudo dpkg --install google-chrome-stable_current_i386.deb || sudo apt-get -f install; fi
   # Install PIL
-  - sudo apt-get install python-imaging
+  - sudo apt-get install python-imaging-tk
   - pip install -r .requirements --use-mirrors
 
 script:
