Make sure google-chrome is actually installed.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
 install:
   # Install Chrome
   - wget https://dl.google.com/linux/direct/google-chrome-stable_current_i386.deb
-  - if [ x$BROWSER == xChrome ]; then sudo dpkg --install google-chrome-stable_current_amd64.deb || sudo apt-get -f install; fi
+  - if [ x$BROWSER == xChrome ]; then sudo dpkg --install google-chrome-stable_current_amd64.deb || sudo apt-get -f install; ls -l /usr/bin/google-chrome; fi
   # Install PIL
   - pip install -r .requirements --use-mirrors
 
