Adding all 3 versions of chrome.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: python
 
 env:
-  - BROWSER=Chrome
+  - BROWSER=Chrome-stable
+  - BROWSER=Chrome-beta
+  - BROWSER=Chrome-unstable
   - BROWSER=PhantomJS
   - BROWSER=Firefox
 
@@ -9,7 +11,7 @@ install:
   - ./.travis-setup.sh
 
 script:
-  - python run-tests.py -a -x -b $BROWSER
+  - python run-tests.py -a -x -b $(echo $BROWSER | sed -e's/-.*//')
 
 after_failure:
   - for file in *.log; do echo $file; echo "======================"; cat $file; done || true
