--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,16 @@ env:
   - BROWSER=PhantomJS
   - BROWSER=Firefox
 
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3
+
 install:
   - ./.travis-setup.sh
 
 script:
-  - python run-tests.py -a -x -b $(echo $BROWSER | sed -e's/-.*//')
+  - python run-tests.py -a -b $(echo $BROWSER | sed -e's/-.*//')
 
 after_failure:
   - for file in *.log; do echo $file; echo "======================"; cat $file; done || true
