--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ env:
   - BROWSER=PhantomJS
   - BROWSER=Firefox
 
+matrix:
+  allow_failures:
+    - BROWSER=Firefox
+    - BROWSER=PhantomJS
+
 install:
   - ./.travis-setup.sh
 
