Adding screenshot taking functionality.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - ./.travis-setup.sh
 
 script:
-  - python run-tests.py -a -x -b $(echo $BROWSER | sed -e's/-.*//')
+  - python run-tests.py -a -u -x -b $(echo $BROWSER | sed -e's/-.*//')
 
 after_failure:
   - for file in *.log; do echo $file; echo "======================"; cat $file; done || true
