--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - ./.travis-setup.sh
 
 script:
-  - python ./test/update-testcases.py || (echo "Please run update-testcases!"; false)
+  - python ./test/update-testcases.py --dry-run || (echo "Please run update-testcases!"; false)
   - python run-tests.py -a -u -x -b $(echo $BROWSER | sed -e's/-.*//')
 
 after_failure:
