--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,23 @@
 language: python
 
 env:
-  - BROWSER=Chrome-stable
-  - BROWSER=Chrome-beta
-  - BROWSER=Chrome-unstable
-  - BROWSER=Firefox-stable
-  - BROWSER=Firefox-beta
-  - BROWSER=Firefox-aurora
+  global:
+    - secure: "VBZ2zI5kTGL3TSJ6QWKiUnLLJiSl97t4sE51YsYTWrk0C5FTfzizP/PuHLlYxb00URqGLXVQxr5HsfOPXtmrIfVDTRjlZlSdzNAjBHDb1Ogm+LUquV6sne/yLe3HhWiiNztyOt7lci53iXwEL15eRJWTweBnvZizElvXq6rE9bE=" # mithro/web-animations-js
+    - secure: "SkkMENmCBobwyCMGU9giQiNJ2QWTNaszrbjp8VJUAfRrqx7QzLxHzcOXDc4iUtz3UUKPJEbOxbIy950Wv2bp3tOOrYHVLOZcIGWN3qxQ6gy2xs3N7foR3Y/kgmEq2c6apcF8t6xiXn7M06yf13SKONXLsQVuSE8r5ToM736mhPs=" # web-animations/web-animations-js
+    - SAUCE_USERNAME=mithro
 
-#matrix:
-#  allow_failures:
-#    - env: BROWSER=Firefox
+  matrix:
+    - BROWSER=Chrome-stable ARGS='-x -b Chrome -u'
+    - BROWSER=Chrome-beta ARGS='-x -b Chrome -u'
+    - BROWSER=Chrome-unstable ARGS='-x -b Chrome -u'
+    - BROWSER=Firefox-stable ARGS='-x -b Firefox -u'
+    - BROWSER=Firefox-beta ARGS='-x -b Firefox -u'
+    - BROWSER=Firefox-aurora ARGS='-x -b Firefox -u'
+    - BROWSER=Remote-Win8-IE10 ARGS='-b Remote --sauce --remote-caps=INTERNETEXPLORER --remote-caps=version=10 --remote-caps=platform="Windows 8"'
+#    - BROWSER=Remote-Safari ARGS='-b Remote --sauce --remote-caps=SAFARI --remote-caps=version=6 --remote-caps=platform="OS X 10.8"'
+#    - BROWSER=Remote-iPhone-6 ARGS='-b Remote --sauce --remote-caps=IPHONE --remote-caps=version=6 --remote-caps=platform="OS X 10.8"'
+#    - BROWSER=Remote-Android-4.0 ARGS='-b Remote --sauce --remote-caps=ANDROID --remote-caps=version=4.0 --remote-caps=platform=Linux'
+
 
 notifications:
   irc: "irc.freenode.org#webanimations"
@@ -23,7 +30,12 @@ install:
 
 script:
   - python ./test/update-testcases.py --dry-run || (echo "Please run update-testcases!"; false)
-  - python run-tests.py -a -u -x -b $(echo $BROWSER | sed -e's/-.*//')
+  # For pull requests we don't have access to secure environment variables, so we just return true.
+  - if [ x$BROWSER == "xRemote" -a x$TRAVIS_SECURE_ENV_VARS != "xtrue" ]; then
+      true;
+    else
+      echo python run-tests.py -a $ARGS | bash;
+    fi
 
 after_failure:
   - for file in *.log; do echo $file; echo "======================"; cat $file; done || true
