--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ env:
     - BROWSER=Firefox-stable ARGS='-x -b Firefox -u'
     - BROWSER=Firefox-beta ARGS='-x -b Firefox -u'
     - BROWSER=Firefox-aurora ARGS='-x -b Firefox -u'
-    - BROWSER=Remote-Win8-IE10 ARGS='-b Remote --sauce --remote-caps=INTERNETEXPLORER --remote-caps=version=10 --remote-caps=platform="Windows 8"'
-#    - BROWSER=Remote-Safari ARGS='-b Remote --sauce --remote-caps=SAFARI --remote-caps=version=6 --remote-caps=platform="OS X 10.8"'
-#    - BROWSER=Remote-iPhone-6 ARGS='-b Remote --sauce --remote-caps=IPHONE --remote-caps=version=6 --remote-caps=platform="OS X 10.8"'
-#    - BROWSER=Remote-Android-4.0 ARGS='-b Remote --sauce --remote-caps=ANDROID --remote-caps=version=4.0 --remote-caps=platform=Linux'
+    - BROWSER=Remote ARGS='-b Remote --sauce --remote-caps=INTERNETEXPLORER --remote-caps=version=10 --remote-caps=platform="Windows 8"'
+#    - BROWSER=Remote ARGS='-b Remote --sauce --remote-caps=SAFARI --remote-caps=version=6 --remote-caps=platform="OS X 10.8"'
+#    - BROWSER=Remote ARGS='-b Remote --sauce --remote-caps=IPHONE --remote-caps=version=6 --remote-caps=platform="OS X 10.8"'
+#    - BROWSER=Remote ARGS='-b Remote --sauce --remote-caps=ANDROID --remote-caps=version=4.0 --remote-caps=platform=Linux'
 
 
 notifications:
