--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ env:
 #    - BROWSER=Remote ARGS='-b Remote --sauce --remote-caps=SAFARI --remote-caps=version=6 --remote-caps=platform="OS X 10.8"'
 #    - BROWSER=Remote ARGS='-b Remote --sauce --remote-caps=IPHONE --remote-caps=version=6 --remote-caps=platform="OS X 10.8"'
 #    - BROWSER=Remote ARGS='-b Remote --sauce --remote-caps=ANDROID --remote-caps=version=4.0 --remote-caps=platform=Linux'
+    - BROWSER=Android-Chrome ARGS=''
 
 
 notifications:
